Actualización-linkvercel-a-clonGoogle

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="mg-auto"> <!--mx-auto es margin en ambos lados automatico centra las cosas-->
                   <!-- Agregar el doc html del la descripción de mi proyecto agregando lo de la preparación de salud y bienestar -->
-                  <a href="#" target="_blank"><i id="icon-proyect" class="bi bi-arrow-up-right-square-fill fs-2 "></i></a>
+                  <a href="https://clon-google-b7-g2-weld.vercel.app/" target="_blank"><i id="icon-proyect" class="bi bi-arrow-up-right-square-fill fs-2 "></i></a>
                 </li>
                 <li class="d-flex align-items-center me-3">
                   <svg class="bi me-2" width="1em" height="1em">
