--- a/index.html
+++ b/index.html
@@ -107,6 +107,52 @@
           <div class="col-lg-6">
             <!--dentro del col-lg-6 agrego un espacio y un shadow o un border etc diversas propiedades de estilo, abajo en la clase estaba : text-body-emphasis -->
             <h1 id="nombre-vaniaflores" class="display-5 fw-bold  lh-1 mb-3 text-shadow-1 text-white">Vania Flores</h1>
+            <h2 id="app"  class="display-8 fw-bold  lh-1 mb-3 text-shadow-1 text-white">Ingeniera en Sistemas computacionales.</h2>
+            <!-- <h2 class="text-primary mb-4" id="typewriter">
+              <span class="Typewriter__wrapper">
+                "I"
+                "n"
+                "g"
+                "e"
+                "n"
+                "i"
+                "e"
+                "r"
+                "a"
+                ""
+                "e"
+                "n"
+                ""
+                "s"
+                "i"
+                "s"
+                "t"
+                "e"
+                "m"
+                "a"
+                "s"
+                ""
+                "c"
+                "o"
+                "m"
+                "p"
+                "u"
+                "t"
+                "a"
+                "c"
+                "i"
+                "o"
+                "n"
+                "a"
+                "l"
+                "e"
+                "s"
+                "."
+              </span>
+              <span class="Typewriter__cursor">|</span>
+            </h2> -->
+
+
             <p id="descripcion-1" class="lead text-white">Ingeniera en sistemas computacionales y Técnico en
               programación.<br>Con
               participación en desarrollo de prototipos de desarrollo tecnológico aplicados al área de salud.
@@ -488,6 +534,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+
+    <!-- script para animacion -->
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>  
+<!-- nuestro script va al final de todos  -->
+ <script src="script.js"></script>
+
 </body>
 
 </html>
